--- a/backup/customer/folder_name_here/.env
+++ b/backup/customer/folder_name_here/.env
@@ -5,3 +5,7 @@ PATH_SSH="/var/www/vhosts/folder_name_here/"
 MYSQL_USER="adminnameprefix__${CUSTOMER}"
 MYSQL_PASSWORD="securepwd"
 # SKIPDATABASES_CUSTOM=""
+ZIP_PWD="securepwdhere"
+KEEPCOPYS=4
+OWNER=ownernamehere
+TOKEN=tokenhere
