--- a/backup/customer/folder_name_here/.env
+++ b/backup/customer/folder_name_here/.env
@@ -1,11 +1,11 @@
 #!/bin/bash
-USRN_SSH=user_name
-HOST_SSH=127.0.0.1
-PATH_SSH="/var/www/vhosts/folder_name_here/"
+#USRN_SSH=user_name
+#HOST_SSH=127.0.0.1
+#PATH_SSH="/var/www/vhosts/folder_name_here/"
 MYSQL_USER="adminnameprefix__${CUSTOMER}"
 MYSQL_PASSWORD="securepwd"
 # SKIPDATABASES_CUSTOM=""
-ZIP_PWD="securepwdhere"
+#ZIP_PWD="securepwdhere"
 KEEPCOPYS=4
-OWNER=ownernamehere
-TOKEN=tokenhere
+#OWNER=ownernamehere
+#TOKEN=tokenhere
